Add missing packages in requirement.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,11 @@ psycopg2-binary
 python-jose[cryptography]
 passlib[bcrypt]
 pydantic
+pydantic-settings
 python-multipart
 alembic
 pytest
 httpx
 openai
 faker
+email-validator
